--- a/Automation/action-drip.mdx
+++ b/Automation/action-drip.mdx
@@ -2,15 +2,14 @@
 title: "Action - Drip"
 description: "Drip action is used to limit or prevent a high number of executions simultaneously. Set the batch size and enter the next step in a predetermined number for the given interval."
 ---
-## Action - Drip 
 
-[Video Placeholder [https://youtu.be/6KtsCUj-EAE]
+[Video Placeholder]
 
 ### More Tutorials From the Community
 
-[Video Placeholder https://www.youtube.com/watch?v=BfJIhU6j2f8]
-[Video Placeholder https://www.youtube.com/watch?v=JIYbj73SCCY]
-[Video Placeholder https://www.youtube.com/watch?v=b0mF5Bheqow]
+[Video Placeholder ]
+[Video Placeholder ]
+[Video Placeholder ]
 
 Drip action is used to limit or prevent a high number of executions simultaneously. Set the batch size and enter the next step in a predetermined number for the given interval.
 
