--- a/Automation/action-if-or-else-date-type-field-conditions.mdx
+++ b/Automation/action-if-or-else-date-type-field-conditions.mdx
@@ -1,8 +1,7 @@
 ---
-title: "Action - If or Else - Date type field conditions"
+title: "Action If or Else Date type field conditions"
 description: "Compare any Date type field with the following conditions"
 ---
-## Action - If/Else - Date type field conditions 
 
 *Compare any Date type field with the following conditions:*
 ![](https://s3.amazonaws.com/cdn.freshdesk.com/data/helpdesk/attachments/production/48229985627/original/159LMUPQTU_FNrOAnKJinzRADJrxFb_CMg.png?1654169676)
