--- a/Automation/how-to-create-a-birthday-reminder-workflow.mdx
+++ b/Automation/how-to-create-a-birthday-reminder-workflow.mdx
@@ -2,9 +2,8 @@
 title: "How to Create a Birthday Reminder Workflow?"
 description: "This is to enhance your marketing strategy with a personalized touch through this comprehensive guide."
 ---
-## How to Create a Birthday Reminder Workflow? 
 
-[Video Placeholder [https://youtu.be/VMyUlqgR2-Q]
+[Video Placeholder ]
 
 Elevate your customer engagement with a Birthday Reminder Workflow Trigger that enables personalized experiences for your clients. This tutorial teaches how to create and customize this versatile trigger for tailored birthday greetings or promotions. Enhance your marketing strategy with a personalized touch through this comprehensive guide.
 
