--- a/Automation/how-to-use-stripe-one-time-charge-in-workflows.mdx
+++ b/Automation/how-to-use-stripe-one-time-charge-in-workflows.mdx
@@ -2,6 +2,5 @@
 title: "How To Use Stripe One-Time Charge In Workflows"
 description: "The process of one-time stripe usage in workflows"
 ---
-## How To Use Stripe One-Time Charge In Workflows 
 
-[Video Placeholder [https://youtu.be/CIapXam6l90]
+[Video Placeholder]
