--- a/Automation/standard-triggers-opportunity-created.mdx
+++ b/Automation/standard-triggers-opportunity-created.mdx
@@ -1,8 +1,7 @@
 ---
-title: "Standard Triggers - Opportunity Created"
+title: "Standard Triggers Opportunity Created"
 description: "Runs when the opportunity gets created"
 ---
-## Standard Triggers - Opportunity Created 
 
 ### Runs when the opportunity gets created
 
