--- a/Automation/standard-triggers-order-submitted.mdx
+++ b/Automation/standard-triggers-order-submitted.mdx
@@ -1,8 +1,7 @@
 ---
-title: "Standard Triggers - Order Submitted"
+title: "Standard Triggers Order Submitted"
 description: "The Order Submitted trigger is a powerful new workflow trigger that allows businesses to upsell customers after they have submitted an order."
 ---
-## Standard Triggers - Order Submitted 
 
 The Order Submitted trigger is a powerful new workflow trigger that allows businesses to upsell customers after they have submitted an order. This trigger works with both 1-step and 2-step order forms, giving businesses the flexibility to customize their upsells based on the type of order form used or the types of products purchased.
 
@@ -13,7 +12,7 @@ The Order Submitted trigger is a powerful new workflow trigger that allows busin
 >
 >If you put in a **wait step** which holds the first instance (which came from the purchase of the primary product) of the customer in the workflow, and they go ahead and purchase the upsell, since they would still be held inside the workflow, the Upsell purchase will not let them enter the workflow a second time. Try to avoid using wait steps in this workflow, feel free to use them if you **do not plan on selling Upsells or Bumps for the same product.**
 
-[Video Placeholder https://www.loom.com/share/03105bba5cc64a4b8aec9e9e4ac9a88a?sid=abf565ce-449e-4d87-b364-3bf774a18caa]
+[Video Placeholder ]
 
 The trigger runs upon a 1-Step or 2-Step order form submission and upsells. This trigger runs both when an order form is submitted, and again when an upsell purchase occurs; on either of these occasions it holds the product information. This means that if the end customer purchases products A and B on an order form and product C on an upsell, it will run two times (first for A and B purchase, and then for the upsell purchase)
 
