--- a/Automation/triggers-overview.mdx
+++ b/Automation/triggers-overview.mdx
@@ -1,9 +1,7 @@
-
 ---
-title: "Triggers - Overview"
+title: "Triggers Overview"
 description: "Triggers are conditional statements similar to Zaps in Zapier that connect all the different modules of Monstro"
 ---
-## Triggers - Overview 
 
 Note: Now that Workflows are live in all accounts, you can do everything that Triggers and Campaigns do (and more!), all in one builder!  Click to learn more about Workflows.
 
