--- a/Automation/using-the-go-to-event-in-workflows.mdx
+++ b/Automation/using-the-go-to-event-in-workflows.mdx
@@ -2,8 +2,7 @@
 title: "Using The Go-To Event In Workflows"
 description: "The Go-To event allows you to jump contacts from one event to another in Workflows."
 ---
-## Using The Go-To Event In Workflows 
 
-[Video Placeholder [https://youtu.be/owRWoMHUxJQ]
+[Video Placeholder]
 
 The Go-To event allows you to jump contacts from one event to another in Workflows. To use a Go-To step, simply add a Go-To event and then draw a line to where you want the contacts to jump - that's it!
