--- a/Automation/workflow-builder-wait-event.mdx
+++ b/Automation/workflow-builder-wait-event.mdx
@@ -2,9 +2,8 @@
 title: "Workflow Builder-Wait Event"
 description: "The wait event in a workflow allows you to pause a contact until a specific condition, such as a tag, appointment, time, event, or contact reply, is met."
 ---
-## Workflow Builder - Wait Event
 
-[Video Placeholder [https://youtu.be/QVbh0kMOyN4]
+[Video Placeholder]
 
 The wait event is a special type of workflow action that allows you to pause the contact at a specific step in your workflow until some desired condition is met. The wait event can be used when you want to wait for a tag, an appointment, a specific time or event, a contact reply, etc.
 
