--- a/Calendar/what-to-do-if-the-calendar-says-no-slot-available-this-month.mdx
+++ b/Calendar/what-to-do-if-the-calendar-says-no-slot-available-this-month.mdx
@@ -3,6 +3,5 @@ title: "What to do if the calendar says No slot available this month"
 description: "If the calendar indicates "No slot available this month," follow these steps to address the issue."
 ---
 
-## What to do if the calendar says No slot available this month 
 
-(Video Placeholder https://www.loom.com/share/42c036cf2faa4e1ba12b03eb6e3425b0?sid=55d19485-14d0-4b1a-b2c6-a1bf50fc928e]
+[Video Placeholder ]
