--- a/Emails/standard-triggers-contact-tag.mdx
+++ b/Emails/standard-triggers-contact-tag.mdx
@@ -1,10 +1,7 @@
-
 ---
-title: "Standard Triggers - Contact Tag"
+title: "Standard Triggers for Contact Tag"
 description: "Explore additional configurations to receive email copies through a Forwarding Address or BCC, with elaboration on Reply Tracking."
-
 ---
-## Standard Triggers - Contact Tag 
 
 ### What does the Contact Tag Workflow trigger do?
 
