--- a/Payments/how-to-create-coupons-for-products.mdx
+++ b/Payments/how-to-create-coupons-for-products.mdx
@@ -1,12 +1,10 @@
-
 ---
 title: "How to Create Coupons for Products"
 description: "Create coupons for one-time and bump products in V2 Funnels; subscription coupons coming soon."
-
 ---
-## How to Create Coupons for Products 
 
-[Video Placeholder https://youtu.be/MsPp_smXUmI](https://youtu.be/MsPp_smXUmI]
+
+[Video Placeholder]
 
 >Currently, coupons only support **one-time products main and bump products in V2 Funnels.** Subscription coupons will be added in upcoming releases  
 >
@@ -17,7 +15,7 @@ Coupons are great for enticing sales! In this article, we’ll break down the ba
 
 ## How to create and add coupons to products  
 
-[Video Placeholder https://www.loom.com/share/3b9bedbd5cf74cee93a74f64e62b4b1c?sid=e4cffdd9-e39e-4b2e-b593-5a66f85f6aa7]
+[Video Placeholder ]
 
 **Please Note:**
 >- Coupon codes are **not case-sensitive** and we will convert all coupon codes into uppercase  
