--- a/Social Media Management/how-to-connect-to-your-google-my-business-location.mdx
+++ b/Social Media Management/how-to-connect-to-your-google-my-business-location.mdx
@@ -1,8 +1,8 @@
 ---
-title: "How to connect to your Google My Business Location(s)"
+title: "How to connect to your Google My Business Location"
 description: "Google my business is the authentic way to acquire the trust of your audience by sharing your details to create a personalized relationship with them."
 ---
-# How to connect to your Google My Business Location(s) 
+
 
 **Google My Business** is one of the most reliable platforms for marketers to manage the online presence of their business niche. It is the authentic way to acquire the trust of your audience by sharing your details to create a personalized relationship with them. This way the ultimate goal is to drive the audience to your businesses.
 
