--- a/Social Media Management/how-to-post-recurring-social-posts-through-the-social-planner.mdx
+++ b/Social Media Management/how-to-post-recurring-social-posts-through-the-social-planner.mdx
@@ -1,15 +1,13 @@
-
 ---
 title: "How to post Recurring Social Posts through the Social Planner?"
 description: "Take control of your content strategy by utilizing this feature, but be mindful of platforms like Twitter, which may flag repetitive content."
 ---
-## How to post Recurring Social Posts through the Social Planner? 
 
 Recurring posts provide a streamlined way to create evergreen content across various social platforms, scheduled daily, weekly, monthly, or yearly. Through a simple process, users can generate quality content using AI, schedule it with flexible time settings, and even edit parent and child posts. Take control of your content strategy by utilizing this feature, but be mindful of platforms like Twitter, which may flag repetitive content.
 
 ### What is this feature?
 
-[Video Placeholder https://www.loom.com/share/b840a7d40b3b45cb8dd551f32bb67495?sid=cf7370e2-e00c-4473-baf0-3135f4ad184c]
+[Video Placeholder]
 
 The recurring posts feature in the Social Planner is designed to help users maintain consistent and automated social media engagement by scheduling evergreen content regularly. Here's a detailed breakdown of how it works:
 
