--- a/Social Media Management/how-to-schedule-posts-in-bulk-on-the-social-planner.mdx
+++ b/Social Media Management/how-to-schedule-posts-in-bulk-on-the-social-planner.mdx
@@ -1,9 +1,7 @@
-
 ---
 title: "How to Schedule Posts in Bulk on the Social Planner CSV"
 description: "CSV is a “comma-separated values” file that allows you to save your information in a structured way."
 ---
-## How to Schedule Posts in Bulk on the Social Planner CSV
 
 Scheduling Social Media posts in bulk with the help of a CSV file can be the most optimal time-saving technique for scheduling in advance for the social journey. CSV is a “comma-separated values” file that allows you to save your information in a structured way.
 
@@ -17,7 +15,7 @@ You will need to make sure that the CSV file you import into the Social Planner 
 
 This explains in detail how your CSV needs to be set up before you can import it into the Social Planner to bulk schedule posts.
 
-  [Video Placeholder https://www.loom.com/share/db89542c5fce49ecb647569a230a1dda?sid=c580ba0a-6e67-438e-b247-f2116235efa0]
+  [Video Placeholder ]
 
 **1. Date and Time Column:**
 
