--- a/Automation/triggers-overview.mdx
+++ b/Automation/triggers-overview.mdx
@@ -5,7 +5,7 @@ description: "Triggers are conditional statements similar to Zaps in Zapier that
 
 Note: Now that Workflows are live in all accounts, you can do everything that Triggers and Campaigns do (and more!), all in one builder!  Click to learn more about Workflows.
 
-[https://www.loom.com/share/3a56239b0b07455bb0cb55943fad45b2?sid=48ee312f-63c5-4e52-a2db-f6931befa061]
+[Video Placeholder]
 
 Triggers are conditional statements (similar to Zaps in Zapier) that connect all the different modules of Monstro
 
