--- a/Automation/workflow-builder-if-or-else-conditional-event.mdx
+++ b/Automation/workflow-builder-if-or-else-conditional-event.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Workflow Builder-If or Else Conditional Event"
-description: "Workflow Builder, utilize "Includes" or "Does not include" conditions, applicable to parameters like Tags and multiple-option custom fields."
+description: "Workflow Builder, utilize Includes or Does not include conditions, applicable to parameters like Tags and multiple-option custom fields."
 ---
 
 ### When using  Includes/ Does Not Include as a condition:
@@ -9,7 +9,7 @@ description: "Workflow Builder, utilize "Includes" or "Does not include" conditi
 >There are several conditional parameters in Workflow Builder where you'll have the option to specify "**Includes**" or "**Does not include**" such as Tags and other multiple-option custom fields (checkbox fields, dropdown pickers, etc.)
 
 
-**Creating an  _And_  condition:**
+**Creating an And condition:**
 
 In the example below we are using the  AND  condition. The system is searching to make sure that the contact Tags - "**Does NOT include**"  both the '**consultation_booked**'  **AND**  '**consultation_confirmed**' tags.
 
