--- a/Automation/workflow-builder-if-or-else-conditional-event.mdx
+++ b/Automation/workflow-builder-if-or-else-conditional-event.mdx
@@ -9,7 +9,7 @@ description: "Workflow Builder, utilize Includes or Does not include conditions,
 >There are several conditional parameters in Workflow Builder where you'll have the option to specify "**Includes**" or "**Does not include**" such as Tags and other multiple-option custom fields (checkbox fields, dropdown pickers, etc.)
 
 
-**Creating an And condition:**
+**Creating an [And] condition:**
 
 In the example below we are using the  AND  condition. The system is searching to make sure that the contact Tags - "**Does NOT include**"  both the '**consultation_booked**'  **AND**  '**consultation_confirmed**' tags.
 
@@ -19,7 +19,7 @@ If one of the two tags is present on the respective contact, then the condition 
 
 In this example for this contact to go down the "YES" path, both tags would  NOT  be present on the contact profile/record.
 
-**Creating an _Or_  Condition**
+**Creating an [Or] Condition**
 
 If you intend to create an "OR" scenario, you would want to break the two tags into separate conditions and choose the  OR  option like this:
 
