--- a/Calendar/what-to-do-if-the-calendar-says-no-slot-available-this-month.mdx
+++ b/Calendar/what-to-do-if-the-calendar-says-no-slot-available-this-month.mdx
@@ -1,6 +1,6 @@
 ---
 title: "What to do if the calendar says No slot available this month"
-description: "If the calendar indicates "No slot available this month," follow these steps to address the issue."
+description: "If the calendar indicates No slot available this month follow these steps to address the issue."
 ---
 
 
