--- a/Phone System/pricing-and-fees-for-the-a2P-10dlc-service.mdx
+++ b/Phone System/pricing-and-fees-for-the-a2P-10dlc-service.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Pricing and Fees for the A2P 10DLC Service"
-description: "Starting July 5, 2023, register all 10DLC phone numbers for SMS/MMS to U.S. numbers under your brand. Unregistered numbers will be blocked, with full blocking after August 31, 2023."
+description: "Starting July 5, 2023, register all 10DLC phone numbers for SMS or MMS to U.S."
 ---
 
 
@@ -60,13 +60,32 @@ It's worth noting that each segment corresponds to 160 characters for SMS.
 
 **US A2P Reoccurring Monthly Campaign registration fees**:
 
-| Campaign use case type | Cost |
-|--|--|
-| Sole Prop (Starter) | $2.21/month |
-| Standard (see [Table 1 here](https://support.twilio.com/hc/en-us/articles/1260801844470-List-of-campaign-use-case-types-for-A2P-10DLC-registration)) | $12/month |
-|Low-volume* mixed-use case|$1.70/month|
-| Special: Charity / 501(c)(3) Nonprofit | $3.3/month |
-| Special: Emergency Services | $5.5/month |
+<table>
+    <tr>
+        <td>Campaign use case type</td>
+        <td>Cost</td>
+    </tr>
+    <tr>
+        <td>Sole Prop (Starter)</td>
+        <td>$2.21/month</td>
+    </tr>
+    <tr>
+        <td>Standard (see [Table 1 here](https://support.twilio.com/hc/en-us/articles/1260801844470-List-of-campaign-use-case-types-for-A2P-10DLC-registration))</td>
+        <td>$12/month</td>
+    </tr>
+    <tr>
+        <td>Low-volume* mixed-use case</td>
+        <td>$1.70/month</td>
+    </tr>
+    <tr>
+        <td>Special: Charity / 501(c)(3) Nonprofit</td>
+        <td>$3.3/month</td>
+    </tr>
+    <tr>
+        <td>Special: Emergency Services</td>
+        <td>$5.5/month</td>
+    </tr>
+</table>
 
 - Low-volume mixed-use cases support up to 2,000 SMS segments and MMS per day toward T-Mobile (see T-Mobile daily limits) and are given a lower message throughput (MPS) than other use cases, regardless of Trust Score.
 
