--- a/Phone System/terms-and-conditions-guidelines-for-a2p.mdx
+++ b/Phone System/terms-and-conditions-guidelines-for-a2p.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Terms and Conditions Guidelines for A2P"
-description: "To ensure alignment with LC Phone's requirements, your company must comply with carrier standards, industry norms, and relevant laws for the short code campaign."
+description: "To ensure alignment with LC Phone's requirements, your company must comply with carrier standards."
 ---
 
 ### Industry Standards for US Short Code Terms of Service
@@ -15,9 +15,9 @@ Beyond these standards, there may be additional compliance requirements under ap
 
 **Program Name**
 
-1.  Insert program description here; **{a brief description of the types of messages users can expect upon opting in.}**
+1.  Insert program description here; **a brief description of the types of messages users can expect upon opting in.**
 2.  You can cancel the SMS service at any time. Simply text "STOP" to the shortcode. Upon sending "STOP," we will confirm your unsubscribe status via SMS. Following this confirmation, you will no longer receive SMS messages from us. To rejoin, sign up as you did initially, and we will resume sending SMS messages to you.
-3.  If you experience issues with the messaging program, reply with the keyword HELP for more assistance, or reach out directly to  **{support email address or toll-free number}**.
+3.  If you experience issues with the messaging program, reply with the keyword HELP for more assistance, or reach out directly to  **support email address or toll-free number**.
 4.  Carriers are not liable for delayed or undelivered messages.
-5.  As always, message and data rates may apply for messages sent to you from us and to us from you. You will receive  **{message frequency}**. For questions about your text plan or data plan, contact your wireless provider.
-6.  For privacy-related inquiries, please refer to our privacy policy:  **{link to privacy policy}**.
+5.  As always, message and data rates may apply for messages sent to you from us and to us from you. You will receive  **message frequency**. For questions about your text plan or data plan, contact your wireless provider.
+6.  For privacy-related inquiries, please refer to our privacy policy:  **link to privacy policy**.
