--- a/Phone System/a2p-10dlc-campaign-approval-best-practices.mdx
+++ b/Phone System/a2p-10dlc-campaign-approval-best-practices.mdx
@@ -21,11 +21,11 @@ Campaign Information
     1.  Yes
 4.  Message Sample #1
     1.  David, it's Kate from ABC Company. Thanks for opting in to receive SMS notifications. I just saved a time for you on Thursday, June 15, 2023, at 4:00 PM, and I'll see you then! If anything changes, just let me know. If you need to opt-out, reply STOP.
-        1.  include an **Introduction** of yourself/company) and **Opt Out language** (reply STOP to unsubscribe.)
+        1.  include an **Introduction** of yourself/company and **Opt Out language** (reply STOP to unsubscribe.)
             
 5.  Message Sample #2
     1.  David, it's Kate from ABC Company. Thanks for opting in to receive messages. Today, we are giving out a few vouchers to our past patients for a free chiropractic adjustment. Would you like one? If you need to opt out, reply STOP.
-        -   Sometimes, A2P campaigns are **rejected due to users including custom fields or values**. It's important to note that this practice is strongly discouraged. Avoid this: "Hey {{name}}! Samuel from [write the client's company name here] here. We remember you had signed up to receive an appointment with us a little while back. When could we get you rescheduled? Reply STOP to opt out."  
+        -   Sometimes, A2P campaigns are **rejected due to users including custom fields or values**. It's important to note that this practice is strongly discouraged. Avoid this: "Hey [name]! Samuel from [company name] here. We remember you had signed up to receive an appointment with us a little while back. When could we get you rescheduled? Reply STOP to opt out."  
             
 6.  How do end-users consent to receive messages?  
     1.  End users opt-in through an appointment form on the website: **https://www.abccompany.com/appointment**, Users check a box  with optional consent language  to receive messages from us to provide their consent at the end of the appointment form:  [https://storage.googleapis.com/msgsndr/RNTEDRA9ap9xSh2MyTYS/media/65271336fe7786badd88b169.png](https://storage.googleapis.com/msgsndr/RNTEDRA9ap9xSh2MyTYS/media/65271336fe7786badd88b169.png)
@@ -63,7 +63,7 @@ On the website form, Clearly state that submitting their phone number allows the
 
 ### For the checkbox consent, You can type something like this as an example:
 
-I agree to receive marketing messaging from COMPANY_NAME at the phone number provided above. I understand I will receive 2 messages a month, data rates may apply, reply STOP to opt-out
+I agree to receive marketing messaging from [Company Name] at the phone number provided above. I understand I will receive 2 messages a month, data rates may apply, reply STOP to opt-out
 
 Example:
 
@@ -79,26 +79,63 @@ Example:
 ## Ensure data accuracy and consistency.
 
 Make sure you submit Campaign registrations with accurate and consistent data:
-
-| Best Practice | Examples |
-|--|--|
-| Consistency in  **brand**,  **website,**  and  **sample messages** | If your brand name is  **Acme**, your website is  [**www.acme.com**](http://www.acme.com/), but your sample messages say, “Here’s your one-time passcode for logging into  [**www.contoso.com**](http://www.contoso.xn--com-9o0a/),” your campaign will be  **rejected.** |
-| Consistency in  **sample messages**  and  **use cases** | If you register a  **marketing**  campaign but sample messages say, “Here’s your  **one-time passcode**: 123456”, your campaign will be rejected. |
-|Consistency in  **email** **domain**  and  **company name**|Your campaign will be rejected if you register a brand as LeadConnector Inc but provide an email address with the Gmail domain name. *Note that this check  **only applies to large, well-known corporations that should have dedicated email domains**|
-| Make sure you submit  **real, working websites.** | Indicating that your customers opt-in to your messages via the website, but providing a website address that does not work, will lead to campaign rejection. |
-| Make sure the brand you register is the  **actual brand that you’re sending messages for** | If ISV customers register a brand with your company’s information (e.g., a company that  **provides the tech for dental offices**) but end up sending messages for your customers (e.g.,  **individual dentist practices**), your campaign will be rejected. |
-|Make sure you create  **as few duplicative brands and campaigns as possible**|**Excessive**  brands with the  **same EIN and excessive campaigns**  with the same campaign attributes may be seen as  **high-risk**  and may result in campaign rejection|
-| If you wish to send templated messages, please  **indicate the templated fields in sample messages with brackets**  to help reviewers better identify which parts are templated. | For example, please write, “Dental check due for  **[Mary Doe]**, Visit  **[[www.contoso.com](http://www.contoso.com/)]**  to schedule an appointment or call  **[123-456-7890]”** |
+<table>
+    <tr>
+        <td>Best Practice</td>
+        <td>Examples</td>
+    </tr>
+    <tr>
+        <td>Consistency in  **brand**,  **website,**  and  **sample messages**</td>
+        <td>If your brand name is  **Acme**, your website is  [**www.acme.com**](http://www.acme.com/), but your sample messages say, “Here’s your one-time passcode for logging into  [**www.contoso.com**](http://www.contoso.xn--com-9o0a/),” your campaign will be  **rejected.**</td>
+    </tr>
+    <tr>
+        <td>Consistency in  **sample messages**  and  **use cases**</td>
+        <td>If you register a  **marketing**  campaign but sample messages say, “Here’s your  **one-time passcode**: 123456”, your campaign will be rejected.</td>
+    </tr>
+    <tr>
+        <td>Consistency in  **email** **domain**  and  **company name**</td>
+        <td>Your campaign will be rejected if you register a brand as LeadConnector Inc but provide an email address with the Gmail domain name. *Note that this check  **only applies to large, well-known corporations that should have dedicated email domains**</td>
+    </tr>
+    <tr>
+        <td>Make sure you submit  **real, working websites.**</td>
+        <td>Indicating that your customers opt-in to your messages via the website, but providing a website address that does not work, will lead to campaign rejection.</td>
+    </tr>
+    <tr>
+        <td>Make sure the brand you register is the  **actual brand that you’re sending messages for**</td>
+        <td>If ISV customers register a brand with your company’s information (e.g., a company that  **provides the tech for dental offices**) but end up sending messages for your customers (e.g.,  **individual dentist practices**), your campaign will be rejected.</td>
+    </tr>
+    <tr>
+        <td>Make sure you create  **as few duplicative brands and campaigns as possible**</td>
+        <td>**Excessive**  brands with the  **same EIN and excessive campaigns**  with the same campaign attributes may be seen as  **high-risk**  and may result in campaign rejection</td>
+    </tr>
+    <tr>
+        <td>If you wish to send templated messages, please  **indicate the templated fields in sample messages with brackets**  to help reviewers better identify which parts are templated.</td>
+        <td>For example, please write, “Dental check due for  **[Mary Doe]**, Visit  **[[www.contoso.com](http://www.contoso.com/)]**  to schedule an appointment or call  **[123-456-7890]”**</td>
+    </tr>
+</table>
 
 ## Ensure your use case involves consumer consent before sending messages
 
 Make sure you collect consumer consent appropriately. Please refer to the  [CTIA guidelines](https://api.ctia.org/wp-content/uploads/2019/07/190719-CTIA-Messaging-Principles-and-Best-Practices-FINAL.pdf)  for detailed instructions and best practices on handling consumer consent.
   
-| Best Practice | Examples |
-|--|--|
-| Make sure consumer opt-in is collected appropriately | If you indicate you collect opt-in via text messages, but your sample messages say,  **“**Hi, is this the owner of 123 Oak Street? I’d like to discuss how I can help you sell your property”**, it is clear that you  **have not collected appropriate consent**  before sending messages and your campaign will be rejected. |
-| Make sure  **opt-in language**  is available on your website if you indicated in the “message flow” field that a consumer opts into your campaign on your company website. | If your brand Acme uses its website,  [www.acme.com](http://www.acme.com/), to collect phone numbers but your website does not contain opt-in language such as  **“By providing your phone number, you agree to receive text messages from ACME. Message and data rates may apply. Message frequency varies.”**, your campaign will be rejected. |
-|We recommend having  **opt-out language**  in at least one of your sample messages.|For example, please add language such as **“Please reply STOP to opt-out”**  in one of your sample messages.|
+<table>
+    <tr>
+        <td>Best Practice</td>
+        <td>Examples</td>
+    </tr>
+    <tr>
+        <td>Make sure consumer opt-in is collected appropriately</td>
+        <td>If you indicate you collect opt-in via text messages, but your sample messages say,  **“**Hi, is this the owner of 123 Oak Street? I’d like to discuss how I can help you sell your property”**, it is clear that you  **have not collected appropriate consent**  before sending messages and your campaign will be rejected.</td>
+    </tr>
+    <tr>
+        <td>Make sure  **opt-in language**  is available on your website if you indicated in the “message flow” field that a consumer opts into your campaign on your company website.</td>
+        <td>If your brand Acme uses its website,  [www.acme.com](http://www.acme.com/), to collect phone numbers but your website does not contain opt-in language such as  **“By providing your phone number, you agree to receive text messages from ACME. Message and data rates may apply. Message frequency varies.”**, your campaign will be rejected.</td>
+    </tr>
+    <tr>
+        <td>We recommend having  **opt-out language**  in at least one of your sample messages.</td>
+        <td>For example, please add language such as **“Please reply STOP to opt-out”**  in one of your sample messages.</td>
+    </tr>
+</table>
 
 **Please note:**
 >The ecosystem constantly improves the vetting criteria as it comes across additional violations. Please do not consider the best practices listed above as a “catch-all” and guarantee approval as long as you follow them all; instead, consider them as a baseline that illustrates the general direction of compliant, high-quality messaging that the ecosystem is moving towards.
@@ -116,7 +153,7 @@ We've introduced some new updates from our developers. Now, you can also view re
 
 **Approved example:**
 
-End users opt-in by visiting - https://brandname.com/contact_us and filling in their details on the survey Users check a box to receive messages from us to provide their consent at the end of the survey:  https://storage.googleapis.com/msgsndr/xxxxxxxxx.png](https://storage.googleapis.com/msgsndr/xxxxxxxxx.png)**
+End users opt-in by visiting - https://brandname.com/contact_us and filling in their details on the survey Users check a box to receive messages from us to provide their consent at the end of the survey:  https://storage.googleapis.com/msgsndr/xxxxxxxxx.png (https://storage.googleapis.com/msgsndr/xxxxxxxxx.png)**
 
 You can upload the screenshot of the opt-in to the Media file inside the sub-account, Make sure the link goes straight to the form with an optional consent checkbox. If the checkbox is showing at the end of the survey, or behind an appointment form. Please supply a hosted link to an image of the opt-in
 
