--- a/Phone System/what-is-a2p-10dlc.mdx
+++ b/Phone System/what-is-a2p-10dlc.mdx
@@ -6,9 +6,9 @@ description: "A2P 10DLC is a messaging compliance system that enables businesses
 
 A2P 10DLC is a messaging compliance system that enables businesses to send Application-to-Person (A2P) messages via 10-digit long code phone numbers in the United States. This comprehensive guide provides a detailed overview of A2P 10DLC, registration requirements, campaign use cases, compliance guidelines, and the impact on message delivery and pricing. Whether you're a small business or an ISV, understanding messaging compliance is crucial for maintaining reliable and effective communication with your audience.
 
-## **Important Notices**
+**Important Notices**
 
-### **Unregistered 10DLC Message Fee Increases**
+**Unregistered 10DLC Message Fee Increases**
 
 • AT&T and T-Mobile are increasing the per-message rate on unregistered traffic. If these numbers remain unregistered, they may be subject to additional filtering or blocking. Some carrier fees will be increased on June 1, 2023, and others will be increased on August 1, 2023.  
 • For more information on the specific fees and timing, please see  [What Pricing and Fees are Associated with A2P 10DLC.](https://support.twilio.com/hc/en-us/articles/1260803965530-What-pricing-and-fees-are-associated-with-the-A2P-10DLC-service-)  
@@ -224,7 +224,6 @@ Customers sharing a short code among multiple clients or brands for purposes oth
 
 Previously, the end date for shared short codes was identified as June 1, 2021. As of early 2022, the end date for shared short codes is on hold until the successful implementation of A2P 10DLC. A specific date will be shared here when we have information to share.
 
-  
 
 ### Toll-Free SMS – no changes
 
