--- a/Calendar/how-to-setup-your-first-calendar.mdx
+++ b/Calendar/how-to-setup-your-first-calendar.mdx
@@ -1,3 +1,8 @@
+---
+title: "How to Setup Your First Calendar"
+description: "Setting up your first calendar can be overwhelming. Here is a quick guide on how to properly set up all your calendars for your meetings and scheduling needs."
+---
+
 
 Setting up your first calendar can be overwhelming. Here is a quick guide on how to properly set up all your calendars for your meetings and scheduling needs.
 
