--- a/Calendar/how-to-setup-your-first-calendar.mdx
+++ b/Calendar/how-to-setup-your-first-calendar.mdx
@@ -5,6 +5,8 @@ description: "Setting up your first calendar can be overwhelming. Here is a quic
 
 Setting up your first calendar can be overwhelming. Here is a quick guide on how to properly set up all your calendars for your meetings and scheduling needs.
 
+<MDXVideo id="IeUy8h-R5ZQ" title="How to Setup Your First Monstro Calendar" />
+
 
 ### How to Access Calendar Settings
 
