--- a/Calendar/how-to-setup-your-first-calendar.mdx
+++ b/Calendar/how-to-setup-your-first-calendar.mdx
@@ -12,7 +12,7 @@ Setting up your first calendar can be overwhelming. Here is a quick guide on how
 
 To access your calendar settings, click "Calendars" on the left, then "Calendar Settings" at the top.
 
-Access the Calendar:
+**Access the Calendar:**
 
 Navigate to the calendar section by clicking on the "Calendar" option in the navigation menu.
 
