--- a/Calendar/appointment-timeslots-that-are-not-showing-up.mdx
+++ b/Calendar/appointment-timeslots-that-are-not-showing-up.mdx
@@ -5,4 +5,4 @@ description: "Appointment timeslots may not display when they should or appear w
 
 Note:  All-day events from Google are defaulted to FREE as the availability
 
-[Video Placeholder https://www.loom.com/share/b6fbe2fd58ab492a8d698ac80bbbafe2?sid=7baf3be9-e636-4710-9bd7-08bd9a92689a]
+[Video Placeholder]
